[gd_scene load_steps=14 format=2]

[ext_resource path="res://Game/Script/Enemies/FollowEnemy.gd" type="Script" id=1]
[ext_resource path="res://Game/Scenes/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Scenes/WanderController.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Scenes/AttackZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/Assets/player animation/spritesheet (3).png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 60.208

[sub_resource type="CircleShape2D" id=2]
radius = 319.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 150, 150 )

[sub_resource type="Animation" id=6]
resource_name = "IdleDown"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleUp"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 9 ]
}

[sub_resource type="Animation" id=7]
resource_name = "RunDown"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "shake"
}, {
"args": [  ],
"method": "shake"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "rock_effect"
}, {
"args": [  ],
"method": "rock_effect"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "RunUp"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "shake"
}, {
"args": [  ],
"method": "shake"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "rock_effect"
}, {
"args": [  ],
"method": "rock_effect"
} ]
}

[node name="FollowEnemy" type="KinematicBody2D" groups=["Enemies"]]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 2 )

[node name="WanderController" parent="." instance=ExtResource( 3 )]

[node name="AttackZone" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AttackZone"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleDown = SubResource( 6 )
anims/IdleUp = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/RunDown = SubResource( 7 )
anims/RunUp = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -16.25, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
hframes = 18
frame = 9

[node name="feetPos" type="Position2D" parent="."]
position = Vector2( 0, 150 )
scale = Vector2( 1, 1 )

[connection signal="running" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_running"]
[connection signal="body_entered" from="AttackZone" to="." method="_on_AttackZone_body_entered"]
[connection signal="body_exited" from="AttackZone" to="." method="_on_AttackZone_body_exited"]

[editable path="PlayerDetectionZone"]
